# typer-oo-example

./: LICENSE  README.md  pyproject.toml
click_example/: __main__.py  base_module.py  runner.py  utils.py
click_to_many_typers/: __main__.py  base_module.py  runner.py
click_to_typer/: __main__.py  base_module.py  runner.py
config_click_to_typer/: __main__.py  base_module.py  runner.py
hacky_click_to_typer/: base_module.py  runner.py
instance_app/: __main__.py  base_module.py  my_modules.py
many_typers_extended/: __main__.py  base_module.py  my_modules.py  runner_module.py
typer_example/: __main__.py  main_menu.py  new_tournament_menu.py  tournament_menu.py
