[tool.poetry]
name = "typer-oo-example"
version = "0.1.0"
description = "This is answer to one of the questions from Typer repository."
license = "MIT"
authors = ["Michal Bargiel"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
